# msrcapi

./: .env  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/models/: __init__.py  schemas.py
app/routes/: files.py  search.py  versions.py
app/services/: cache.py  database.py  file_service.py  search_service.py
preprocessing/: decompile.py  download.py  indexer.py
